2008-03-07  John W. Eaton  <jwe@octave.org>

	* idx-vector.cc (IDX_VEC_REP::idx_vector_rep (bool),
	IDX_VEC_REP::idx_vector_rep (const boolNDArray&)):
	Simply perform the equivalent of "find" on the bool argument here,
	set one_zero to 0 and orig_dims to size of resulting index vector.
	(IDX_VEC_REP::freeze): Don't call maybe_convert_one_zero_to_idx here.

2008-03-05  Jaroslav Hajek <highegg@gmail.com>

	* dbleQR.cc (QR::insert_col, QR::insert_row, 
	QR::delete_col, QR::delete_row): Use 0-based indexing.
	* CmplxQR.cc (ComplexQR::insert_col, ComplexQR::insert_row, 
	ComplexQR::delete_col, ComplexQR::delete_row): Likewise.

	* dbleCHOL.cc: Small doc and declaration fixes.
	* CmplxHOL.cc: Small doc and declaration fixes.
	* CmplxQR.cc (ComplexQR::ComplexQR): Adjust code to match dbleQR.cc.
	* dbleQR.cc (QR::delete_row): Fix incorrect test.
	* CmplxQR.cc (ComplexQR::delete_row): Fix incorrect test.

2008-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* dbleCHOL.cc (CHOL::set, CHOL::update, CHOL::downdate):
	New functions.
	* dbleCHOL.h: Provide decls.
	* CmplxCHOL.cc (ComplexCHOL::set, ComplexCHOL::update,
	ComplexCHOL::downdate): New functions.
	* CmplxCHOL.h: Provide decls.

	* dbleQR.cc (QR::update, QR::insert_col, QR::delete_col,
	QR::insert_row, QR::delete_row): New methods.
	(QR::QR (const Matrix&, const MAtrix&)): New constructor.
	* dbleQR.h: Provide decls.
	* CmplxQR.cc (ComplexQR::update, ComplexQR::insert_col,
	ComplexQR::delete_col, ComplexQR::insert_row,
	ComplexQR::delete_row): New methods.
	(ComplexQR::ComplexQR (const ComplexMatrix&, const ComplexMAtrix&)):
	New constructor.
	* CmplxQR.h: Provide decls.

2008-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* Array-C.cc, Sparse-C.cc: Include oct-sort.cc after definitions
	of < and > operators.

2008-03-03  David Bateman  <dbateman@free.fr>

	* Sparse.cc (assign1, assign1): Take care of repeated index
	values. Adapt the test code to check for these cases.

2008-03-03  Jaroslav Hajek  <highegg@gmail.com>
